--- a/apps/fcm-api/package.json
+++ b/apps/fcm-api/package.json
@@ -1,43 +1,67 @@
 {
-  "name": "fcm-api",
+  "name": "@fcm/api",
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "imports": {
+    "#/*": "./dist/*"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  },
   "scripts": {
-    "dev": "nest start --watch",
-    "build": "nest build",
+    "debug": "nest start --debug --watch --builder swc",
+    "debug:attach": "nest start --debug-brk --watch --builder swc",
+    "dev": "nest start --watch --builder swc",
+    "build": "nest build --tsc",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\""
+    "swagger:generate": "nest swagger -p tsconfig.swagger.json"
   },
   "dependencies": {
     "@fcm/shared": "workspace:*",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "amadeus": "^11.0.0",
-    "axios": "^1.7.9",
+    "@nestjs/common": "^10.3.3",
+    "@nestjs/config": "^3.2.0",
+    "@nestjs/core": "^10.3.3",
+    "@nestjs/platform-express": "^10.3.3",
+    "axios": "^1.6.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "nest-winston": "^1.9.7",
+    "reflect-metadata": "^0.2.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^10.0.0",
+    "@nestjs/swagger": "^8.1.0",
     "@nestjs/testing": "^10.0.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/jest-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@swc/cli": "^0.5.2",
+    "@swc/core": "^1.10.1",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.11.24",
     "@types/supertest": "^6.0.0",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -45,6 +69,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.19.2",
     "typescript": "5.7.2"
   }
 }
