--- a/apps/fcm-api/package.json
+++ b/apps/fcm-api/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "fcm-api",
+    "name": "@fcm/api",
     "version": "0.0.1",
     "private": true,
     "type": "module",
@@ -19,19 +19,19 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
-        "@fcm/fcm-shared": "workspace:*",
-        "@nestjs/common": "^10.0.0",
-        "@nestjs/config": "^3.1.1",
-        "@nestjs/core": "^10.0.0",
-        "@nestjs/platform-express": "^10.0.0",
-        "@nestjs/swagger": "^7.2.0",
+        "@fcm/shared": "workspace:*",
+        "@nestjs/common": "^10.4.15",
+        "@nestjs/config": "^3.3.0",
+        "@nestjs/core": "^10.4.15",
+        "@nestjs/platform-express": "^10.4.15",
+        "@nestjs/swagger": "^7.4.2",
         "@prisma/client": "5.10.2",
         "axios": "^1.7.9",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "dotenv": "^16.4.7",
         "nest-winston": "^1.9.7",
-        "reflect-metadata": "^0.1.13",
+        "reflect-metadata": "^0.1.14",
         "rxjs": "^7.8.1",
         "winston": "^3.17.0",
         "winston-daily-rotate-file": "^5.0.0"
@@ -40,23 +40,23 @@
         "@fcm/eslint-config": "workspace:*",
         "@fcm/jest-config": "workspace:*",
         "@fcm/typescript-config": "workspace:*",
-        "@nestjs/cli": "^10.0.0",
-        "@nestjs/schematics": "^10.0.0",
-        "@nestjs/testing": "^10.0.0",
-        "@types/express": "^4.17.17",
-        "@types/jest": "^29.5.2",
-        "@types/node": "^20.3.1",
-        "@types/supertest": "^6.0.0",
-        "eslint": "^9.0.0",
-        "jest": "^29.5.0",
-        "prisma": "^5.10.2",
+        "@nestjs/cli": "^10.4.9",
+        "@nestjs/schematics": "^10.2.3",
+        "@nestjs/testing": "^10.4.15",
+        "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.14",
+        "@types/node": "^20.17.10",
+        "@types/supertest": "^6.0.2",
+        "eslint": "^9.17.0",
+        "jest": "^29.7.0",
+        "prisma": "^5.22.0",
         "source-map-support": "^0.5.21",
-        "supertest": "^6.3.3",
-        "ts-jest": "^29.1.0",
-        "ts-loader": "^9.4.3",
-        "ts-node": "^10.9.1",
+        "supertest": "^6.3.4",
+        "ts-jest": "^29.2.5",
+        "ts-loader": "^9.5.1",
+        "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.1.3"
+        "typescript": "^5.7.2"
     },
     "jest": {
         "moduleFileExtensions": [
