--- a/packages/fcm-shared-webui/tsconfig.json
+++ b/packages/fcm-shared-webui/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@fcm/typescript-config/base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "baseUrl": "."
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
