--- a/packages/fcm-shared/tsconfig.json
+++ b/packages/fcm-shared/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "@fcm/typescript-config/base.json",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "rootDir": "src",
-    "outDir": "dist",
-  },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+    "extends": "@fcm/typescript-config/base.json",
+    "compilerOptions": {
+        "baseUrl": ".",
+        "rootDir": "src",
+        "outDir": "dist"
+    },
+    "include": ["src"],
+    "exclude": ["node_modules", "dist"]
 }
