--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -18,6 +18,6 @@
   "devDependencies": {
     "@jest/types": "^29.6.3",
     "jest": "^29.7.0",
-    "next": "^14.2.20"
+    "next": "latest"
   }
 }
