refactoring types, prepared advanced search in fcm-shared

--- a/apps/fcm-webui/tsconfig.json
+++ b/apps/fcm-webui/tsconfig.json
@@ -9,7 +9,11 @@
         "allowImportingTsExtensions": true,
         "allowJs": true,
         "noEmit": true,
-        "jsx": "preserve"
+        "jsx": "preserve",
+        "baseUrl": ".",
+        "paths": {
+            "./app/*": ["./app/*"]
+        }
     },
     "include": [
         "next-env.d.ts",
