--- a/apps/fcm-api/package.json
+++ b/apps/fcm-api/package.json
@@ -49,6 +49,7 @@
         "@types/supertest": "^6.0.2",
         "eslint": "^9.17.0",
         "jest": "^29.7.0",
+        "@jest/globals": "^29.7.0",
         "prisma": "^5.22.0",
         "source-map-support": "^0.5.21",
         "supertest": "^6.3.4",
