--- a/packages/fcm-shared/package.json
+++ b/packages/fcm-shared/package.json
@@ -28,6 +28,18 @@
             "import": "./dist/amadeus/clients/index.js",
             "types": "./dist/amadeus/clients/index.d.ts"
         },
+        "./amadeus/clients/airport-city": {
+            "import": "./dist/amadeus/clients/airport-city/index.js",
+            "types": "./dist/amadeus/clients/airport/city/index.d.ts"
+        },
+        "./amadeus/clients/flight-offer": {
+            "import": "./dist/amadeus/clients/flight-offer/index.js",
+            "types": "./dist/amadeus/clients/flight-offer/index.d.ts"
+        },
+        "./amadeus/clients/flight-offer-advanced": {
+            "import": "./dist/amadeus/clients/flight-offer-advanced/index.js",
+            "types": "./dist/amadeus/clients/flight-offer-advanced/index.d.ts"
+        },
         "./amadeus/types": {
             "import": "./dist/amadeus/types/index.js",
             "types": "./dist/amadeus/types/index.d.ts"
@@ -41,6 +53,9 @@
         "*": {
             "amadeus/clients": [
                 "./dist/amadeus/clients/index.d.ts"
+            ],
+            "amadeus/clients/flight-offer": [
+                "./dist/amadeus/clients/flight-offer/index.d.ts"
             ],
             "amadeus/types": [
                 "./dist/amadeus/types/index.d.ts"
