--- a/apps/fcm-webui/tsconfig.json
+++ b/apps/fcm-webui/tsconfig.json
@@ -12,7 +12,7 @@
         "jsx": "preserve",
         "baseUrl": ".",
         "paths": {
-            "./app/*": ["./app/*"]
+            "@app/*": ["./app/*"]
         }
     },
     "include": [
