storage refactoring, next actions to access database, user searches implementation

--- a/apps/fcm-webui/tsconfig.json
+++ b/apps/fcm-webui/tsconfig.json
@@ -37,7 +37,8 @@
     "next.config.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    ".old/DatabaseContext.tsx"
   ],
   "exclude": ["node_modules"]
 }
