--- a/apps/fcm-api/package.json
+++ b/apps/fcm-api/package.json
@@ -1,81 +1,81 @@
 {
-    "name": "@fcm/api",
-    "version": "0.0.1",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "nest build",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "clean": "rimraf node_modules .turbo .next dist out coverage",
-        "start": "nest start",
-        "dev": "nest start --watch --port 3001",
-        "debug": "nest start --debug --watch",
-        "prod": "node dist/main",
-        "lint": "eslint \"{src,test}/**/*.ts\" --fix",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+  "name": "@fcm/api",
+  "version": "0.0.1",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "clean": "rimraf node_modules .turbo .next dist out coverage .tsbuildinfo",
+    "start": "nest start",
+    "dev": "nest start --watch --port 3001",
+    "debug": "nest start --debug --watch",
+    "prod": "node dist/main",
+    "lint": "eslint \"{src,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
+  "dependencies": {
+    "@fcm/shared": "workspace:*",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/swagger": "^7.4.2",
+    "@prisma/client": "5.10.2",
+    "axios": "^1.7.9",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "dotenv": "^16.4.7",
+    "nest-winston": "^1.9.7",
+    "reflect-metadata": "^0.1.14",
+    "rxjs": "^7.8.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "@fcm/eslint-config": "workspace:*",
+    "@fcm/jest-config": "workspace:*",
+    "@fcm/typescript-config": "workspace:*",
+    "@jest/globals": "^29.7.0",
+    "@nestjs/cli": "^10.4.9",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.15",
+    "@swc/cli": "^0.5.2",
+    "@swc/core": "^1.10.2",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.10",
+    "@types/supertest": "^6.0.2",
+    "eslint": "^9.17.0",
+    "jest": "^29.7.0",
+    "prisma": "^5.22.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.7.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
     },
-    "dependencies": {
-        "@fcm/shared": "workspace:*",
-        "@nestjs/common": "^10.4.15",
-        "@nestjs/config": "^3.3.0",
-        "@nestjs/core": "^10.4.15",
-        "@nestjs/platform-express": "^10.4.15",
-        "@nestjs/swagger": "^7.4.2",
-        "@prisma/client": "5.10.2",
-        "axios": "^1.7.9",
-        "class-transformer": "^0.5.1",
-        "class-validator": "^0.14.1",
-        "dotenv": "^16.4.7",
-        "nest-winston": "^1.9.7",
-        "reflect-metadata": "^0.1.14",
-        "rxjs": "^7.8.1",
-        "winston": "^3.17.0",
-        "winston-daily-rotate-file": "^5.0.0"
-    },
-    "devDependencies": {
-        "@fcm/eslint-config": "workspace:*",
-        "@fcm/jest-config": "workspace:*",
-        "@fcm/typescript-config": "workspace:*",
-        "@jest/globals": "^29.7.0",
-        "@nestjs/cli": "^10.4.9",
-        "@nestjs/schematics": "^10.2.3",
-        "@nestjs/testing": "^10.4.15",
-        "@swc/cli": "^0.5.2",
-        "@swc/core": "^1.10.2",
-        "@types/express": "^4.17.21",
-        "@types/jest": "^29.5.14",
-        "@types/node": "^20.17.10",
-        "@types/supertest": "^6.0.2",
-        "eslint": "^9.17.0",
-        "jest": "^29.7.0",
-        "prisma": "^5.22.0",
-        "source-map-support": "^0.5.21",
-        "supertest": "^6.3.4",
-        "ts-jest": "^29.2.5",
-        "ts-loader": "^9.5.1",
-        "ts-node": "^10.9.2",
-        "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.7.2"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": "src",
-        "testRegex": ".*\\.spec\\.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "../coverage",
-        "testEnvironment": "node"
-    }
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  }
 }
