--- a/apps/fcm-webui/package.json
+++ b/apps/fcm-webui/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write",
-    "clean": "rimraf node_modules .turbo .next dist out coverage"
+    "clean": "rimraf node_modules .turbo .next dist out coverage .tsbuildinfo"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
@@ -32,6 +32,7 @@
     "next-auth": "beta",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "zod": "^3.24.1",
     "zod-formik-adapter": "^1.3.0"
