--- a/packages/fcm-shared-webui/package.json
+++ b/packages/fcm-shared-webui/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . --max-warnings 0",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "generate:component": "turbo gen react-component",
-    "clean": "rimraf node_modules .turbo .next dist out coverage"
+    "clean": "rimraf node_modules .turbo .next dist out coverage .tsbuildinfo"
   },
   "devDependencies": {
     "@fcm/eslint-config": "workspace:*",
