webui working in both local and remote mode, fixed env variables

--- a/apps/fcm-api/tsconfig.json
+++ b/apps/fcm-api/tsconfig.json
@@ -2,13 +2,9 @@
   "extends": "@fcm/typescript-config/nestjs.json",
   "compilerOptions": {
     "paths": {
-      "#/*": ["./src/*"],
-      "@fcm/shared/*": ["../fcm-shared/src/*"]
+      "@/*": ["./src/*"]
     }
   },
-  "include": [
-    "src/**/*.ts",
-    "src/flight-offers/dto/search-flight-offers.dto.ts"
-  ],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
