--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,8 @@
     "PORT",
     "AMADEUS_CLIENT_ID",
     "AMADEUS_CLIENT_SECRET",
-    "AMADEUS_API_URL",
+    "AMADEUS_FLIGHT_OFFER_API_URL",
+    "AMADEUS_AUTH_URL",
     "AMADEUS_TIMEOUT",
     "AUTH_GITHUB_ID",
     "AUTH_GITHUB_SECRET"
