--- a/apps/fcm-api/.env.example
+++ b/apps/fcm-api/.env.example
@@ -7,9 +7,8 @@ LOG_LEVEL=debug
 LOG_DIR=logs
 
 # Amadeus API Configuration
-AMADEUS_API_URL=https://test.api.amadeus.com/v2
+AMADEUS_FLIGHT_OFFER_API_URL=https://test.api.amadeus.com/v2/shopping/flight-offers
 AMADEUS_AUTH_URL=https://test.api.amadeus.com/v1/security/oauth2/token
-
-
+AMADEUS_TIMEOUT=60000
 AMADEUS_CLIENT_ID=95VVb8iUA7ixErZ5WGpnT7sJkQRAUSXJ
 AMADEUS_CLIENT_SECRET=A59oiZTAYGrYpWpe
