--- a/apps/fcm-api/package.json
+++ b/apps/fcm-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "clean": "rimraf node_modules .turbo .next dist out coverage .tsbuildinfo",
+    "clean": "rimraf node_modules .turbo .next dist out coverage tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
     "start": "nest start",
     "dev": "nest start --watch --port 3001",
     "debug": "nest start --debug --watch",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@fcm/shared": "workspace:*",
+    "@fcm/storage": "workspace:*",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.15",
