--- a/apps/fcm-webui/.env.local.example
+++ b/apps/fcm-webui/.env.local.example
@@ -1,7 +1,14 @@
 # Auth
-AUTH_URL=http://localhost:3000
+#AUTH_URL=http://localhost:3000
 AUTH_SECRET=your-secret-key-min-32-chars-long # Generate with: openssl rand -base64 32
 
 # GitHub OAuth
 AUTH_GITHUB_ID=Ov23li0AghVx0GGNzgo7
 AUTH_GITHUB_SECRET=6a101af4f6eb6a6199b850fe23689b8049c48acb
+
+# Amadeus API Configuration
+AMADEUS_FLIGHT_OFFER_API_URL=https://test.api.amadeus.com/v2/shopping/flight-offers
+AMADEUS_AUTH_URL=https://test.api.amadeus.com/v1/security/oauth2/token
+AMADEUS_TIMEOUT=60000
+AMADEUS_CLIENT_ID=a3V7AcFeWwe66DqCkH6S7QW5RalgANED
+AMADEUS_CLIENT_SECRET=Pwx0orI5g6kbrh1l
