--- a/packages/fcm-storage/tsconfig.json
+++ b/packages/fcm-storage/tsconfig.json
@@ -4,10 +4,12 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "target": "ES2020",
-    "moduleResolution": "node",
-    "module": "ESNext"
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "verbatimModuleSyntax": true
   },
-
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
