--- a/apps/fcm-api/package.json
+++ b/apps/fcm-api/package.json
@@ -24,14 +24,20 @@
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.15",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "5.10.2",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
+    "ms": "^2.1.3",
     "nest-winston": "^1.9.7",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
     "winston": "^3.17.0",
@@ -47,9 +53,12 @@
     "@nestjs/testing": "^10.4.15",
     "@swc/cli": "^0.5.2",
     "@swc/core": "^1.10.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
+    "@types/ms": "^0.7.34",
     "@types/node": "^20.17.10",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.17.0",
     "jest": "^29.7.0",
