--- a/apps/fcm-api/tsconfig.json
+++ b/apps/fcm-api/tsconfig.json
@@ -5,6 +5,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/examples.ts"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
