--- a/packages/fcm-storage/package.json
+++ b/packages/fcm-storage/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint \"{src,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "debug": "node --loader ts-node/esm src/examples.ts",
-    "clean": "rimraf node_modules .turbo .next dist out coverage tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
-    "db:generate": "prisma generate",
+    "clean": "rimraf node_modules prisma/.prisma .turbo .next dist out coverage tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
+    "db:generate": "rimraf node_modules/.prisma && prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "db:reset": "prisma db push --force-reset && pnpm db:seed"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -51,8 +52,10 @@
     "@fcm/eslint-config": "workspace:*",
     "@fcm/shared": "workspace:*",
     "@fcm/typescript-config": "workspace:*",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.17.10",
     "prisma": "^6.1.0",
+    "rimraf": "^5.0.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
@@ -60,6 +63,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "bcrypt": "^5.1.1",
     "zod": "^3.24.1"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
