--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,8 @@
     "AMADEUS_AUTH_URL",
     "AMADEUS_TIMEOUT",
     "AUTH_GITHUB_ID",
-    "AUTH_GITHUB_SECRET"
+    "AUTH_GITHUB_SECRET",
+    "API_URL"
   ],
   "tasks": {
     "build": {
