saved searches working

--- a/apps/fcm-webui/tsconfig.json
+++ b/apps/fcm-webui/tsconfig.json
@@ -38,7 +38,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".old/DatabaseContext.tsx"
-  ],
+    ".old/DatabaseContext.tsx.old"
+, ".old/axiosClientConfig.ts.old"  ],
   "exclude": ["node_modules"]
 }
