--- a/apps/fcm-api/package.json
+++ b/apps/fcm-api/package.json
@@ -35,13 +35,10 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "ms": "^2.1.3",
-    "nest-winston": "^1.9.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1",
-    "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@fcm/eslint-config": "workspace:*",
