user search results stored

--- a/apps/fcm-webui/.env.local.example
+++ b/apps/fcm-webui/.env.local.example
@@ -12,3 +12,6 @@ AMADEUS_AUTH_URL=https://test.api.amadeus.com/v1/security/oauth2/token
 AMADEUS_TIMEOUT=60000
 AMADEUS_CLIENT_ID=a3V7AcFeWwe66DqCkH6S7QW5RalgANED
 AMADEUS_CLIENT_SECRET=Pwx0orI5g6kbrh1l
+
+API_URL=http://localhost:3001
+API_TIMEOUT=60000
