--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,8 @@
     "AMADEUS_TIMEOUT",
     "AUTH_GITHUB_ID",
     "AUTH_GITHUB_SECRET",
-    "API_URL"
+    "API_URL",
+    "API_TIMEOUT"
   ],
   "tasks": {
     "build": {
