user search stored in db

--- a/apps/fcm-api/.env.example
+++ b/apps/fcm-api/.env.example
@@ -1,8 +1,19 @@
-# Server Configuration
+# App configuration
 PORT=3001
 NODE_ENV=development
 
-# Logging Configuration
+# Database configuration
+DATABASE_URL="file:./dev.db"
+
+# JWT configuration
+JWT_SECRET="your-jwt-secret-key-here" # Change this in production!
+JWT_ACCESS_EXPIRATION="15m"
+JWT_REFRESH_EXPIRATION="7d"
+
+# CORS configuration
+CORS_ORIGIN=http://localhost:3000
+
+# Logging configuration
 LOG_LEVEL=debug
 LOG_DIR=logs
 
@@ -10,5 +21,5 @@ LOG_DIR=logs
 AMADEUS_FLIGHT_OFFER_API_URL=https://test.api.amadeus.com/v2/shopping/flight-offers
 AMADEUS_AUTH_URL=https://test.api.amadeus.com/v1/security/oauth2/token
 AMADEUS_TIMEOUT=60000
-AMADEUS_CLIENT_ID=95VVb8iUA7ixErZ5WGpnT7sJkQRAUSXJ
-AMADEUS_CLIENT_SECRET=A59oiZTAYGrYpWpe
+AMADEUS_CLIENT_ID=
+AMADEUS_CLIENT_SECRET=
