docker configuration (still to be tested) and updated docs

--- a/apps/fcm-api/package.json
+++ b/apps/fcm-api/package.json
@@ -1,22 +1,30 @@
 {
   "name": "@fcm/api",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "description": "Flight Cost Monitor API",
+  "author": "",
   "private": true,
+  "license": "UNLICENSED",
   "type": "module",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "clean": "rimraf node_modules .turbo .next dist out coverage tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
     "start": "nest start",
-    "dev": "nest start --watch --port 3001",
-    "debug": "nest start --debug --watch",
-    "prod": "node dist/main",
-    "lint": "eslint \"{src,test}/**/*.ts\" --fix",
+    "dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "clean": "rimraf node_modules .turbo dist coverage .tsbuildinfo",
+    "docker:build": "docker build -t fcm-api -f Dockerfile ../..",
+    "docker:push": "docker push fcm-api",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down"
   },
   "dependencies": {
     "@fcm/shared": "workspace:*",
