--- a/apps/fcm-webui/package.json
+++ b/apps/fcm-webui/package.json
@@ -9,7 +9,11 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write",
-    "clean": "rimraf node_modules .turbo .next dist out coverage .tsbuildinfo"
+    "clean": "rimraf node_modules .turbo .next dist out coverage .tsbuildinfo",
+    "docker:build": "docker build -t fcm-webui -f Dockerfile ../..",
+    "docker:push": "docker push fcm-webui",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
