scheduler in progress

--- a/apps/fcm-api/.env.example
+++ b/apps/fcm-api/.env.example
@@ -1,4 +1,4 @@
-# App configuration
+# Server Configuration
 PORT=3001
 NODE_ENV=development
 
@@ -10,7 +10,11 @@ JWT_SECRET="your-jwt-secret-key-here" # Change this in production!
 JWT_ACCESS_EXPIRATION="15m"
 JWT_REFRESH_EXPIRATION="7d"
 
-# CORS configuration
+# Telegram Configuration
+TELEGRAM_BOT_TOKEN=your_bot_token
+TELEGRAM_CHAT_ID=your_chat_id
+
+# CORS Configuration
 CORS_ORIGIN=http://localhost:3000
 
 # Logging configuration
@@ -23,3 +27,16 @@ AMADEUS_AUTH_URL=https://test.api.amadeus.com/v1/security/oauth2/token
 AMADEUS_TIMEOUT=60000
 AMADEUS_CLIENT_ID=
 AMADEUS_CLIENT_SECRET=
+
+# WebSocket Configuration
+WS_PORT=3002
+
+# Scheduler Configuration
+MAX_CONCURRENT_TASKS=5
+DEFAULT_TASK_TIMEOUT=30000
+MAX_RETRIES=3
+
+# Monitoring Configuration
+METRICS_RETENTION_DAYS=30
+ALERT_THRESHOLD_FAILURES=3
+ALERT_THRESHOLD_DURATION=60000
