--- a/apps/fcm-api/package.json
+++ b/apps/fcm-api/package.json
@@ -21,7 +21,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "clean": "rimraf node_modules .turbo dist coverage .tsbuildinfo",
-    "docker:build": "docker build -t fcm-api -f Dockerfile ../..",
+    "docker:build": "docker buildx build -t fcm-api -f Dockerfile ../..",
     "docker:push": "docker push fcm-api",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down"
@@ -29,13 +29,16 @@
   "dependencies": {
     "@fcm/shared": "workspace:*",
     "@fcm/storage": "workspace:*",
+    "@nestjs/axios": "^3.1.3",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.15",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/swagger": "^7.4.2",
+    "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "5.10.2",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -46,7 +49,9 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
+    "toad-scheduler": "^3.0.1"
   },
   "devDependencies": {
     "@fcm/eslint-config": "workspace:*",
