--- a/apps/fcm-webui/package.json
+++ b/apps/fcm-webui/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
+    "socket.io-client": "^4.8.1",
     "zod": "^3.24.1",
     "zod-formik-adapter": "^1.3.0"
   },
