--- a/apps/fcm-api/package.json
+++ b/apps/fcm-api/package.json
@@ -27,6 +27,8 @@
     "docker:down": "docker-compose down"
   },
   "dependencies": {
+    "@anatine/zod-nestjs": "^2.0.9",
+    "@anatine/zod-openapi": "^2.2.6",
     "@fcm/shared": "workspace:*",
     "@fcm/storage": "workspace:*",
     "@nestjs/axios": "^3.1.3",
@@ -51,7 +53,8 @@
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
-    "toad-scheduler": "^3.0.1"
+    "toad-scheduler": "^3.0.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@fcm/eslint-config": "workspace:*",
