--- a/apps/fcm-webui/package.json
+++ b/apps/fcm-webui/package.json
@@ -38,9 +38,10 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.0",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "zod": "^3.24.1",
-    "zod-formik-adapter": "^1.3.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@fcm/eslint-config": "workspace:*",
