still not working

--- a/apps/fcm-api/.env.example
+++ b/apps/fcm-api/.env.example
@@ -7,8 +7,9 @@ DATABASE_URL="file:./dev.db"
 
 # JWT configuration
 JWT_SECRET="your-jwt-secret-key-here" # Change this in production!
-JWT_ACCESS_EXPIRATION="15m"
-JWT_REFRESH_EXPIRATION="7d"
+JWT_REFRESH_SECRET="your-jwt-refresh-secret-key-here" # Change this in production!
+JWT_ACCESS_EXPIRATION=900
+JWT_REFRESH_EXPIRATION=604800
 
 # Telegram Configuration
 TELEGRAM_BOT_TOKEN=your_bot_token
@@ -16,6 +17,9 @@ TELEGRAM_CHAT_ID=your_chat_id
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
+
+# WebSocket Configuration
+WS_PORT=3002
 
 # Logging configuration
 LOG_LEVEL=debug
@@ -27,9 +31,6 @@ AMADEUS_AUTH_URL=https://test.api.amadeus.com/v1/security/oauth2/token
 AMADEUS_TIMEOUT=60000
 AMADEUS_CLIENT_ID=
 AMADEUS_CLIENT_SECRET=
-
-# WebSocket Configuration
-WS_PORT=3002
 
 # Scheduler Configuration
 MAX_CONCURRENT_TASKS=5
