--- a/apps/fcm-webui/tsconfig.json
+++ b/apps/fcm-webui/tsconfig.json
@@ -39,6 +39,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".old/DatabaseContext.tsx.old"
-, ".old/axiosClientConfig.ts.old", ".old/providers.tsx", "src/context/SearchFormContext.tsx-old", "src/context/SimpleSearchContext.tsx.old", "src/context/SimpleSearchFormContext.tsx-old", ".old/providers/providers.tsx"  ],
+, ".old/axiosClientConfig.ts.old", ".old/providers.tsx", "src/context/SearchFormContext.tsx-old", "src/context/SimpleSearchContext.tsx.old", "src/context/SimpleSearchFormContext.tsx-old", ".old/providers/providers.tsx", ".old/axiosConfig.ts"  ],
   "exclude": ["node_modules"]
 }
