--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "turbo format",
     "test": "turbo test",
     "test:e2e": "turbo test:e2e",
+    "kill": "taskkill /F /IM node.exe /T",
     "clean": "turbo run clean",
     "clean:all": "pnpm run clean && pnpm -r exec rimraf node_modules .turbo .next dist out coverage",
     "update-deps": "pnpm update -r --latest",
@@ -27,13 +28,13 @@
   "devDependencies": {
     "@fcm/eslint-config": "workspace:*",
     "@fcm/typescript-config": "workspace:*",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
-    "eslint": "^9.17.0",
-    "npm-check-updates": "^17.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "eslint": "^9.19.0",
+    "npm-check-updates": "^17.1.14",
     "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
-    "turbo": "^2.3.3"
+    "turbo": "^2.3.4"
   },
   "packageManager": "pnpm@9.15.3",
   "engines": {
