--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -28,5 +28,8 @@
         "globals": "^15.14.0",
         "typescript": "^5.7.2",
         "typescript-eslint": "^8.18.1"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.1"
     }
 }
