--- a/turbo.json
+++ b/turbo.json
@@ -15,7 +15,8 @@
     "API_URL",
     "API_TIMEOUT",
     "CORS_ORIGIN",
-    "WS_PORT"
+    "WS_PORT",
+    "AUTH_SECRET"
   ],
   "tasks": {
     "build": {
