--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,25 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug NestJS API",
+      "runtimeExecutable": "pnpm",
+      "runtimeArgs": ["start:debug"],
+      "cwd": "${workspaceFolder}/apps/fcm-api",
+      "console": "integratedTerminal",
+      "skipFiles": ["<node_internals>/**", "node_modules/**"],
+      "sourceMaps": true,
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/apps/fcm-api/**",
+        "!**/node_modules/**"
+      ],
+      "outFiles": ["${workspaceFolder}/apps/fcm-api/dist/**/*.js"],
+      "env": {
+        "NODE_ENV": "development"
+      }
+    },
+    {
       "name": "Debug Server (Next.js)",
       "type": "node",
       "request": "launch",
