--- a/apps/fcm-api/package.json
+++ b/apps/fcm-api/package.json
@@ -45,7 +45,7 @@
     "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "5.10.2",
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
@@ -69,7 +69,7 @@
     "@nestjs/testing": "^10.4.15",
     "@swc/cli": "^0.5.2",
     "@swc/core": "^1.10.2",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/ms": "^0.7.34",
