--- a/apps/fcm-api/tsconfig.json
+++ b/apps/fcm-api/tsconfig.json
@@ -7,7 +7,7 @@
   },
   "include": [
     "src/**/*.ts",
-    "src/examples.ts",
+    "test/examples.ts",
     "../../packages/fcm-shared/src/logging/winston/logging.config.ts"
   ],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
