--- a/apps/fcm-webui/package.json
+++ b/apps/fcm-webui/package.json
@@ -30,7 +30,9 @@
     "@tanstack/react-query": "^5.62.11",
     "@tanstack/react-query-devtools": "^5.62.11",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "next": "^15.1.3",
     "next-auth": "beta",
