--- a/packages/fcm-shared-webui/package.json
+++ b/packages/fcm-shared-webui/package.json
@@ -24,5 +24,8 @@
     "@types/react-dom": "^19.0.0",
     "react": "^19.0.0",
     "typescript": "5.7.2"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1"
   }
 }
