--- a/packages/fcm-shared/package.json
+++ b/packages/fcm-shared/package.json
@@ -100,6 +100,8 @@
   "dependencies": {
     "@nestjs/mapped-types": "^2.0.6",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "jwt-decode": "^4.0.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.24.1"
