--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -19,5 +19,8 @@
     "@jest/types": "^29.6.3",
     "jest": "^29.7.0",
     "next": "^15.1.3"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1"
   }
 }
