--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -8,5 +8,8 @@
   },
   "scripts": {
     "clean": "rimraf node_modules .turbo .next dist out coverage"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1"
   }
 }
